--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link href="stylesheets/animations.css" rel="stylesheet" />
    <link href="stylesheets/style_nice.css" rel="stylesheet" />-->
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/styles2.min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/styles.min.css">
     <link href="stylesheets/bootstrap-theme.css" rel="stylesheet" />
     <link href="stylesheets/style_nice.css" rel="stylesheet" />
    
@@ -93,7 +93,7 @@
             <li class="dropdown">
                 <a data-toggle="dropdown" class="dropdown-toggle" href="/">
                     <span class="profile-ava">
-                        <img alt="avatar" src="img/{{currentUser.uploadedFile}}" />
+                        <img alt="avatar" src="img/{{currentProfile.uploadedFile}}" />
                     </span>
                     <span class="username" ng-bind="currentUser.name"></span>
                     <b class="caret"></b>
@@ -145,47 +145,10 @@
         <br /><img src="images/spinner.gif" />&nbsp;&nbsp;Loading
     </div>
     
-    <script src="app2.min.js"></script>
+    <script src="app.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <!--<script src="templates.js"></script>-->
-  <!--  <script src="javascripts/vendors/angular.js"></script>
-     <script src="javascripts/vendors/angular-messages.js"></script>
-    <script src="javascripts/vendors/angular-resource.js"></script>
-    <script src="javascripts/vendors/angular-route.js"></script>
-    <script src="javascripts/vendors/angular-ui-bootstrap.js"></script>
-    <script src="javascripts/vendors/angular-animate.js"></script>
-    <script src="javascripts/vendors/angular-cookies.min.js"></script>
-    <script src="javascripts/vendors/moment.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="app.js"></script>
-
-    <script src="controllers/productController.js"></script>
-    <script src="controllers/editProductContrller.js"></script>
-    <script src="controllers/loginController.js"></script>
-    <script src="controllers/signupController.js"></script>
-    <script src="controllers/navbarController.js"></script>
-    <script src="controllers/profileController.js"></script>
-    <script src="controllers/uploadFileCtrl.js"></script>
-    <script src="controllers/chatController.js"></script>
-    <script src="controllers/forgetPasswordController.js"></script>
-    <script src="controllers/resetPasswordController.js"></script>
-
-    <script src="services/socket.js"></script>
-    <script src="services/productService.js"></script>
-    <script src="services/alertingService.js"></script>
-    <script src="services/modalService.js"></script>
-    <script src="services/authService.js"></script>
-    <script src="services/profileService.js"></script>
-    <script src="services/fileUpload.js"></script>
-
-
-    <script src="directives/wcOverly.js"></script>
-    <script src="directives/repeatPassword.js"></script>
-    <script src="directives/passwordStrength.js"></script>
-    <script src="directives/uniqueEmail.js"></script>
-    <script src="directives/fileModel.js"></script>
-
-    <script src="filter/fromNow.js"></script>-->
+    <script src="templates.js"></script>
+  
 
 </body>
 </html>
