--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
      <!--we use ngAnimate and angular-animation as js class and animation.ccs for acting this animation-->
    <div class="slide-animation-container" style="padding-top:70px;padding-left:30px;padding-right:30px;height:70%;position:relative;">
          <div class="slide-animation" ng-view></div>
-         <div class="footer" style="float:left;">Copyright(c) 2015 Powered By Martin Karen</div>
+         <div class="footer" style="float:left;">Copyright(c) 2015 Powered By Mohammad Karimi</div>
     </div>
     
     <div data-wc-overlay data-wc-overlay-delay="300">
